--- a/Web/views/partials/head.ejs
+++ b/Web/views/partials/head.ejs
@@ -49,7 +49,7 @@ const fullImageUrl = seo.image.startsWith("http") ? seo.image : (_hostingURL ? _
 
 <!-- Preload Critical Assets -->
 <link rel="preload" href="/static/css/modern-ui.css" as="style">
-<link rel="preload" href="/static/js/app.js" as="script">
+<link rel="preload" href="/static/js/app-skynet-v1.min.js" as="script">
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" as="style">
 
 <!-- Open Graph / Facebook -->
